@@ -1,11 +1,1 @@
-AUX cmsd.confd 193 SHA256 50e9c05d9090498853f8d34a7676228a1670a8c8512254151139ae6de876bee3 SHA512 f2e1b55eb27a59f32211eb5d839428fd4155c59898a38949bc4013be6b5f560fed795623e9401c4540382243314c257ca1007a089a57a5610b97e89f676f1408 WHIRLPOOL d377fc399aecc760d610ce34984647dca1364c051ff7dacd9cb8d7a23e4dadf7ca96c546d44cf294cbbee19c91464b2042907ff660e6158399baddff937b1093
-AUX cmsd.initd 993 SHA256 3aad47f4949da37d97ef08068435121b7e861a5b89fe13ad7633a065e2954ec8 SHA512 eaef2f79b0b999935ae68e2ecb391cb335550f32e0325661e84ef86c600d930874fff3893d3c0debc751dac843eaccda7d02a40c00d3e38b1087891dd61d36e7 WHIRLPOOL 32c8a21ca06bccd59c5cf7e9ace354e41c588e7df68d3ca82bef160cfc5ee876a401b4cdd4c0418b5e433cd6392ccb98fbf37341855f5527ec77c3a19daf3bde
-AUX frm_purged.initd 1009 SHA256 948236ba61ab7d3c932a2a8159bf2da4864c3ce4ee3900ec3f2ac596dff7c1cf SHA512 945080c25b30ab9d82cf60134631f6fcbb7cd19708115ee5efc988386f7a198888e5328bd053ab4541d8d14003a3e96894834e7284344dae22021723576a802a WHIRLPOOL 2f46a6b856c35df4e33c1cfc800f55676c72c57f616afa60bab01f672638d1691641f3eae23a23113f9d9ab16cad47ea7cc2c153d784c77eb48b4877f1c3685f
-AUX frm_xfrd.initd 1011 SHA256 04d3395ebfe826e22e4c48fb5c6861f07807ed85204f28020f8fe5a622c31e09 SHA512 abe8dda53a6750959fa250c0d2aba32564c99f2585910332f2d9c3daf8187bbcaca7e5673648e96f385ac2b8c8b871ce1546f8b34c5be65f522d5e3a2afc177d WHIRLPOOL 17e5922c3da70bbd0083d9c51ea08a50669c9ae122df737535d37196f7cf2e5a39abfd8f590dbc62fe688304f58986a924a53c7758f1d0c5cff463691f51053d
-AUX xrootd-no-werror.patch 559 SHA256 ce4eb50998227d239437c76c993a691c3b04cd88e86ee100e5d1e578b2d0a4ed SHA512 993b18aaf851fb7115073acfd2f653c0e8e2df77ca9c4f7daf17d62e57d1ff7a8d1e548466c1a3cb014a563761a02b27ded3e2fdddd6be97570a8086c7e7da58 WHIRLPOOL 8bf01d9bef5601153e5442b58825cf9722e7e7f755a1abf24f1a12f030ee3c2fffbb6819d8ea25fc674734c23dc3dfffb989925fc1de63887b41eebc5cf79dce
-AUX xrootd.confd 651 SHA256 c0bec135fc63da3000a520ebe1cffec7e507f4f31e9038f7ef4350f973548785 SHA512 60ab5b6d77cf79437960044bf201127c8adf5134e7f61a18dcccd2e474a4e41eda971e3ada71dea987716080fb308af98a5237bab2a0b82f50f932ff59e3fdea WHIRLPOOL ca35a9ce16b7d82839ca6ef1989b5b40177c93ff52379a2296e4bd99483422f2f49c57eb0b646673f84bc09f9b3b8f1298c906311367711f60170394c0dee6c6
-AUX xrootd.initd 968 SHA256 ba83e4bb99a7a236e3131019c5c3775e0c22bc180ef5791dc7d60cc0e0891efe SHA512 3b2d92f15907dbec4eea071018d8fb9ad5d091a59f49bacc80e2882f6b57d26485a34c5869979f842aac4ff08fa4a5206c09ecb921e859a83360058d5c42f361 WHIRLPOOL 84bbeea7013f512f383708f5b76814bbfa35fb785e8619f8d78ad34ec4a99a3caf293f00d23dccc30149356fa7fe62459f2a5201d756722cd0778cbf31fa7bfd
 DIST xrootd-4.0.4.tar.gz 1920380 SHA256 17091c1de35b06fccc0acbf2f2084d697e3cebea09dc4056338da5e11458b5f7 SHA512 6419c6d70d2e481963b74a9f23808ca889530079dc6e8bc6aa47ff888b6cc5613a1c6702dd3fb86f6e416255206f9db14f9d775896feae6ba70907c666615a79 WHIRLPOOL 0f3422ebf254750d2ca9e122b0eb4f00bd802d378f3d520006b3772cd511ec385a79dced9e111b46ce4296a1ca339fc71425b0a5877385084f0870707b45664b
-EBUILD xrootd-4.0.4.ebuild 1927 SHA256 608768ca1abda33c0143f45a97cebbb910976c5b64e6844640d0bf31dee22ffd SHA512 a40f18570f1f55b146a285d1b70775447ef7b662833b6a1f9557a1fc8044e29ce231dc2ce0481dc883a30892b9c96da8394fe9c17301a66beac2203891f8b9f0 WHIRLPOOL 9e90cb014689d89ccf2a22704463d8cbdd452198b274f36e0810249f0ca28a66646f9c15251ddf3d9366abf974ed17e2d70432d03fc9d25ad5c5a5de06ded20f
-MISC ChangeLog 4044 SHA256 a14476f27e2bf31549ab297b1882dbd4616ab00d121bcb527a371b92ce00027e SHA512 adb356be9167bd50f5e79af2711cb4c2860820c28c4de0ddf6dec74765b4a6b4ad59edaec3f28cae0dcfbe1314120b1e1d41cd33a4841a34ade43f9571c5d217 WHIRLPOOL 9f904690858fa1f1dc743a46011e851ec7568cc5f51b0b9a68cbdfaea23fb10a1e418f064cacb5edf02370eb64232ec99a41aa70cc5fe3bf1833b68ed9c6fc25
-MISC metadata.xml 671 SHA256 4b7fe955de34a52ccb81772aeb326674c3c8f371abd550676cbed5bb7f27e76f SHA512 1b7f5c9ea11cfc6e8a5d91b6d28450b783b685bce95d07cb2e023a14af42ec4e2affc8ff1e80b5a973d574499d63c1390fda599ff69b0838b29c3951810bf940 WHIRLPOOL ff405df291dba6dfe4b83d51b23730e1ab39d433c57aae1937467fbe47b07870262e07f4d49b65fc0e989a3748346ae65ae0ca31c2a546b98a346a547af71fe7
