@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci-physics</herd>
-<longdescription lang="en">
+  <herd>sci-physics</herd>
+  <longdescription lang="en">
   XROOTD software framework is a fully generic suite for fast, low latency
   and scalable data access, which can serve natively any kind of data,
   organized as a hierarchical filesystem-like namespace, based on the
@@ -10,7 +10,7 @@
   It is usually used with <pkg>sci-physics/root</pkg> and its PROOF
   facilities for cluster computing in high energy physics.
 </longdescription>
-<use>
-  <flag name="fuse">Enable the <pkg>sys-fs/fuse</pkg> filesystem driver</flag>
-</use>
+  <use>
+    <flag name="fuse">Enable the <pkg>sys-fs/fuse</pkg> filesystem driver</flag>
+  </use>
 </pkgmetadata>
