@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-libs/xrootd/ChangeLog,v 1.19 2014/06/19 18:13:17 bicatali Exp $
 
+  01 Dec 2014; Justin Lecher <jlec@gentoo.org> xrootd-4.0.4.ebuild,
+  metadata.xml:
+  Use PATCHES
+
 *xrootd-4.0.0 (19 Jun 2014)
 
   19 Jun 2014; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-4.0.0.ebuild:
